quick fix to navbar title spacing

--- a/public/style.css
+++ b/public/style.css
@@ -23,15 +23,15 @@ form div {
 #lettuce-logo {
   width: 32px;
   height: 32px;
-  margin-left: 100px;
-  
-#nav-logo {
+  /* margin-left: 100px; */
+}
+/* #nav-logo {
   height:32px;
   width:32px;
   padding-right: 25px;
-}
+} */
 
-.nav-title{
+/* .nav-title{
   display:flex;
 
-}
+} */
